--- a/index.html
+++ b/index.html
@@ -3,77 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProMail Expert | Correction IA</title>
+    <title>ProMail Expert | Mode Stable</title>
     <style>
         body { font-family: sans-serif; background: #f3f4f6; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
         .box { background: white; width: 90%; max-width: 450px; padding: 25px; border-radius: 12px; box-shadow: 0 10px 15px rgba(0,0,0,0.1); }
         h2 { color: #4f46e5; text-align: center; }
-        label { display: block; margin: 15px 0 5px; font-weight: bold; font-size: 0.8rem; }
-        input, textarea { width: 100%; padding: 12px; border: 1px solid #d1d5db; border-radius: 8px; box-sizing: border-box; }
-        button { width: 100%; background: #4f46e5; color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 20px; }
-        #output { margin-top: 20px; display: none; background: #eff6ff; padding: 15px; border-radius: 8px; border-left: 4px solid #4f46e5; }
-        #error { color: #dc2626; font-size: 0.8rem; margin-top: 10px; display: none; text-align: center; }
+        input, textarea { width: 100%; padding: 12px; border: 1px solid #d1d5db; border-radius: 8px; box-sizing: border-box; margin-bottom: 15px; }
+        button { width: 100%; background: #4f46e5; color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        #output { margin-top: 20px; display: none; background: #eff6ff; padding: 15px; border-radius: 8px; border-left: 4px solid #4f46e5; white-space: pre-wrap; }
+        #err { color: #dc2626; font-size: 0.8rem; margin-top: 10px; display: none; }
     </style>
 </head>
 <body>
     <div class="box">
         <h2>ProMail Expert</h2>
-        <label>CLÉ API (TOKEN HUGGING FACE)</label>
-        <input type="password" id="tok" placeholder="hf_..." onchange="localStorage.setItem('mail_tok', this.value)">
-        <label>VOTRE MESSAGE</label>
-        <textarea id="msg" rows="4" placeholder="Tapez votre message ici..."></textarea>
-        <button onclick="corriger()" id="btn">AMÉLIORER MON MESSAGE</button>
-        <div id="loader" style="display:none; text-align:center; margin-top:10px;">⏳ Analyse en cours...</div>
-        <div id="error"></div>
+        <input type="password" id="tok" placeholder="Clé hf_..." onchange="localStorage.setItem('mtok', this.value)">
+        <textarea id="msg" rows="4" placeholder="Votre message..."></textarea>
+        <button onclick="run()">AMÉLIORER MON MESSAGE</button>
+        <div id="lod" style="display:none; text-align:center; margin-top:10px;">⏳ IA en cours...</div>
+        <div id="err"></div>
         <div id="output"></div>
     </div>
 
     <script>
-        // Charge le token sauvegardé
-        window.onload = () => {
-            document.getElementById('tok').value = localStorage.getItem('mail_tok') || '';
-        };
+        document.getElementById('tok').value = localStorage.getItem('mtok') || '';
 
-        async function corriger() {
+        async function run() {
             const t = document.getElementById('tok').value.trim();
             const m = document.getElementById('msg').value.trim();
-            const out = document.getElementById('output');
-            const err = document.getElementById('error');
-            const btn = document.getElementById('btn');
-            const lod = document.getElementById('loader');
+            if(!t || !m) return alert("Remplis tout !");
 
-            if(!t || !m) return alert("Veuillez remplir les deux cases.");
-
-            btn.style.display = 'none';
-            lod.style.display = 'block';
-            out.style.display = 'none';
-            err.style.display = 'none';
+            document.getElementById('lod').style.display = 'block';
+            document.getElementById('output').style.display = 'none';
+            document.getElementById('err').style.display = 'none';
 
             try {
-                // Utilisation du modèle Mistral 7B (plus stable pour les requêtes directes)
-                const response = await fetch("https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2", {
+                const r = await fetch("https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.2", {
                     headers: { "Authorization": `Bearer ${t}`, "Content-Type": "application/json" },
                     method: "POST",
-                    body: JSON.stringify({ inputs: "Reformule ce message de façon professionnelle et polie en français : " + m }),
+                    body: JSON.stringify({ inputs: `[INST] Réécris ce message en français professionnel et poli : ${m} [/INST]` }),
                 });
 
-                const data = await response.json();
-
-                if (response.ok) {
-                    let text = data[0].generated_text;
-                    // Nettoie la réponse si l'IA répète la consigne
-                    out.innerText = text.replace("Reformule ce message de façon professionnelle et polie en français : " + m, "").trim();
-                    out.style.display = 'block';
+                const d = await r.json();
+                if (r.ok) {
+                    let text = d[0].generated_text;
+                    document.getElementById('output').innerText = text.split('[/INST]').pop().trim();
+                    document.getElementById('output').style.display = 'block';
                 } else {
-                    err.innerText = "Erreur : " + (data.error || "Clé invalide");
-                    err.style.display = 'block';
+                    document.getElementById('err').innerText = "Erreur : " + d.error;
+                    document.getElementById('err').style.display = 'block';
                 }
             } catch (e) {
-                err.innerText = "Blocage navigateur (CORS). Essayez de désactiver vos bloqueurs de pub ou testez sur téléphone.";
-                err.style.display = 'block';
+                document.getElementById('err').innerText = "Connexion bloquée par le navigateur. Testez sur votre téléphone en 4G.";
+                document.getElementById('err').style.display = 'block';
             } finally {
-                btn.style.display = 'block';
-                lod.style.display = 'none';
+                document.getElementById('lod').style.display = 'none';
             }
         }
     </script>
