--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProMail Expert | v5</title>
+    <title>ProMail Expert | v6</title>
     <style>
         body { font-family: sans-serif; background: #f0f2f5; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
         .card { background: white; width: 90%; max-width: 400px; padding: 25px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); text-align: center; }
@@ -17,16 +17,16 @@
 
 <div class="card">
     <h2>ProMail Expert</h2>
-    <input type="password" id="tk" placeholder="Token hf_..." onchange="localStorage.setItem('mail_v5', this.value)">
-    <textarea id="msg" rows="5" placeholder="Votre message..."></textarea>
+    <input type="password" id="tk" placeholder="Ton token hf_..." onchange="localStorage.setItem('mail_v6', this.value)">
+    <textarea id="msg" rows="5" placeholder="Ton message ici..."></textarea>
     <button onclick="send()">AMÉLIORER MON MESSAGE</button>
-    <p id="lod" style="display:none">⏳ L'IA travaille via relais sécurisé...</p>
+    <p id="lod" style="display:none">⏳ L'IA génère ton message...</p>
     <div id="res"></div>
 </div>
 
 <script>
     // Chargement auto du token
-    document.getElementById('tk').value = localStorage.getItem('mail_v5') || '';
+    document.getElementById('tk').value = localStorage.getItem('mail_v6') || '';
 
     async function send() {
         const t = document.getElementById('tk').value.trim();
@@ -34,23 +34,22 @@
         const out = document.getElementById('res');
         const lod = document.getElementById('lod');
 
-        if(!t || !m) return alert("Remplissez tout !");
+        if(!t || !m) return alert("Remplis les deux cases !");
         lod.style.display = "block";
         out.style.display = "none";
 
         try {
-            // Utilisation d'un proxy CORS pour éviter le blocage navigateur
-            const proxy = "https://corsproxy.io/?";
-            const target = "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.3";
+            // NOUVELLE ADRESSE DEMANDÉE PAR HUGGING FACE
+            const target = "https://router.huggingface.co/hf-inference/models/mistralai/Mistral-7B-Instruct-v0.3";
             
-            const response = await fetch(proxy + encodeURIComponent(target), {
+            const response = await fetch(target, {
                 method: "POST",
                 headers: { 
                     "Authorization": `Bearer ${t}`,
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({ 
-                    inputs: `[INST] Réécris ce message de façon professionnelle et polie en français : ${m} [/INST]`,
+                    inputs: `[INST] Réécris ce message de façon professionnelle, polie et sans fautes en français : ${m} [/INST]`,
                     parameters: { max_new_tokens: 300 }
                 })
             });
@@ -62,10 +61,10 @@
                 out.innerText = text.split('[/INST]').pop().trim();
                 out.style.display = "block";
             } else {
-                alert("L'IA répond : " + (data.error || "Vérifiez votre token"));
+                alert("Erreur : " + (data.error || "Problème avec le modèle"));
             }
         } catch (err) {
-            alert("Erreur de connexion. Si vous êtes sur mobile, essayez de rafraîchir.");
+            alert("Erreur de connexion. Vérifie ta clé API.");
         } finally {
             lod.style.display = "none";
         }
