--- a/index.html
+++ b/index.html
@@ -1,87 +1,143 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProMail Express</title>
+    <title>ProMail Express • AI Reformulator</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        body { font-family: sans-serif; background: #eef2ff; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
-        .card { background: white; width: 90%; max-width: 420px; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
-        h2 { color: #4338ca; text-align: center; margin-top: 0; }
-        input, textarea { width: 100%; padding: 12px; margin: 10px 0; border: 2px solid #e2e8f0; border-radius: 10px; box-sizing: border-box; outline: none; transition: 0.3s; }
-        input:focus, textarea:focus { border-color: #4338ca; }
-        button { width: 100%; padding: 15px; background: #4338ca; color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px; }
-        #res { margin-top: 20px; padding: 15px; background: #f1f5f9; border-left: 5px solid #4338ca; border-radius: 8px; display: none; white-space: pre-wrap; font-size: 15px; }
-        .status { display: none; color: #64748b; font-size: 14px; margin-top: 10px; text-align: center; }
-        .note { font-size: 13px; color: #666; text-align: center; margin-top: 15px; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .fade-in { animation: fadeIn 0.6s ease-out forwards; }
+        .glow-focus { box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.3); }
     </style>
 </head>
-<body>
-<div class="card">
-    <h2>ProMail Express</h2>
-    <input type="password" id="tk" placeholder="Colle ta clé hf_... (Inference Providers)" onchange="localStorage.setItem('saved_tk', this.value)">
-    <textarea id="msg" rows="4" placeholder="Ton message à rendre plus pro..."></textarea>
-    <button onclick="send()">TRANSFORMER</button>
-    <div id="lod" class="status">⏳ L'IA prépare une version professionnelle...</div>
-    <div id="res"></div>
-    <div class="note">Modèle actuel : Qwen2.5-7B-Instruct (excellent en FR). Change-le dans le code si tu veux tester SmolLM ou Llama-3.2.</div>
-</div>
+<body class="bg-gradient-to-br from-gray-950 to-indigo-950 min-h-screen text-gray-100 flex items-center justify-center p-4 transition-colors duration-300 dark">
+    <div class="w-full max-w-lg">
+        <!-- Card principale -->
+        <div class="bg-gray-900/70 backdrop-blur-xl border border-gray-700/50 rounded-2xl shadow-2xl shadow-indigo-500/10 p-8 transition-all duration-500 hover:shadow-indigo-600/20">
+            <!-- Header avec toggle -->
+            <div class="flex items-center justify-between mb-8">
+                <h1 class="text-3xl font-bold bg-gradient-to-r from-indigo-400 to-purple-500 bg-clip-text text-transparent flex items-center gap-3">
+                    <i class="fas fa-wand-magic-sparkles text-3xl"></i>
+                    ProMail Express
+                </h1>
+                <button id="themeToggle" class="text-2xl hover:scale-110 transition-transform" title="Toggle theme">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
 
-<script>
-    document.getElementById('tk').value = localStorage.getItem('saved_tk') || '';
+            <!-- Input clé -->
+            <label class="block text-sm font-medium text-gray-300 mb-2">Clé API Hugging Face (Inference Providers)</label>
+            <input type="password" id="tk" placeholder="hf_..." 
+                   class="w-full px-5 py-4 bg-gray-800/50 border border-gray-600 rounded-xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-500 glow-focus transition-all duration-300"
+                   onchange="localStorage.setItem('saved_tk', this.value)">
 
-    async function send() {
-        const token = document.getElementById('tk').value.trim();
-        const message = document.getElementById('msg').value.trim();
-        const output = document.getElementById('res');
-        const loader = document.getElementById('lod');
+            <!-- Textarea message -->
+            <label class="block text-sm font-medium text-gray-300 mt-6 mb-2">Message à professionnaliser</label>
+            <textarea id="msg" rows="5" placeholder="Colle ton texte ici... (ex: Salut ça va ? Je t'envoie le doc demain)"
+                      class="w-full px-5 py-4 bg-gray-800/50 border border-gray-600 rounded-xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-500 glow-focus transition-all duration-300 resize-none"></textarea>
 
-        if (!token || !message) {
-            alert("Clé API + message obligatoires !");
-            return;
-        }
+            <!-- Bouton Transformer -->
+            <button onclick="send()" class="mt-8 w-full py-5 bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-bold text-lg rounded-xl shadow-lg shadow-indigo-500/30 hover:shadow-indigo-600/50 transform hover:scale-[1.02] transition-all duration-300 flex items-center justify-center gap-3">
+                <i class="fas fa-magic"></i> TRANSFORMER EN PRO
+            </button>
 
-        loader.style.display = "block";
-        output.style.display = "none";
+            <!-- Loader -->
+            <div id="lod" class="hidden mt-6 text-center text-indigo-400 font-medium animate-pulse">
+                ⏳ L'IA reformule en mode professionnel...
+            </div>
 
-        try {
-            const response = await fetch("https://router.huggingface.co/v1/chat/completions", {
-                method: "POST",
-                headers: {
-                    "Authorization": `Bearer ${token}`,
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    model: "Qwen/Qwen2.5-7B-Instruct",  // ← Change ici si tu veux : "HuggingFaceTB/SmolLM2-1.7B-Instruct" ou "meta-llama/Llama-3.2-3B-Instruct"
-                    messages: [
-                        {
-                            role: "user",
-                            content: `Reformule ce message de façon très professionnelle, polie et concise (style email professionnel français) :\n\n${message}`
-                        }
-                    ],
-                    max_tokens: 350,
-                    temperature: 0.7
-                })
-            });
+            <!-- Résultat -->
+            <div id="res" class="hidden mt-8 p-6 bg-gray-800/40 border border-indigo-500/30 rounded-xl whitespace-pre-wrap text-gray-200 relative fade-in">
+                <button id="copyBtn" class="absolute top-3 right-3 text-gray-400 hover:text-indigo-400 transition-colors" title="Copier">
+                    <i class="fas fa-copy text-xl"></i>
+                </button>
+                <div id="resultText"></div>
+            </div>
 
-            if (!response.ok) {
-                const err = await response.json().catch(() => ({}));
-                throw new Error(`Erreur HTTP ${response.status} – ${err.error?.message || 'Vérifie console'}`);
+            <!-- Note -->
+            <p class="mt-6 text-center text-sm text-gray-500">
+                Modèle : Qwen2.5-7B-Instruct • Change-le dans le code si tu veux tester SmolLM ou Llama-3.2
+            </p>
+        </div>
+    </div>
+
+    <script>
+        // Sauvegarde clé
+        document.getElementById('tk').value = localStorage.getItem('saved_tk') || '';
+
+        // Dark/Light toggle
+        const toggle = document.getElementById('themeToggle');
+        const html = document.documentElement;
+        const icon = toggle.querySelector('i');
+
+        toggle.addEventListener('click', () => {
+            html.classList.toggle('dark');
+            icon.classList.toggle('fa-moon');
+            icon.classList.toggle('fa-sun');
+        });
+
+        // Fonction send
+        async function send() {
+            const token = document.getElementById('tk').value.trim();
+            const message = document.getElementById('msg').value.trim();
+            const loader = document.getElementById('lod');
+            const resDiv = document.getElementById('res');
+            const resultText = document.getElementById('resultText');
+
+            if (!token || !message) {
+                alert("Clé API et message obligatoires !");
+                return;
             }
 
-            const data = await response.json();
-            const text = data.choices?.[0]?.message?.content?.trim() || "Réponse vide...";
+            loader.classList.remove('hidden');
+            resDiv.classList.add('hidden');
 
-            output.innerText = text;
-            output.style.display = "block";
+            try {
+                const response = await fetch("https://router.huggingface.co/v1/chat/completions", {
+                    method: "POST",
+                    headers: {
+                        "Authorization": `Bearer ${token}`,
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({
+                        model: "Qwen/Qwen2.5-7B-Instruct",
+                        messages: [{
+                            role: "user",
+                            content: `Reformule ce message de façon très professionnelle, polie et concise (style email professionnel français) :\n\n${message}`
+                        }],
+                        max_tokens: 350,
+                        temperature: 0.7
+                    })
+                });
 
-        } catch (err) {
-            console.error(err);
-            alert("Erreur : " + err.message + "\nVérifie ton token, le modèle, ou teste avec un autre comme SmolLM2.");
-        } finally {
-            loader.style.display = "none";
+                if (!response.ok) {
+                    const err = await response.json().catch(() => ({}));
+                    throw new Error(`Erreur ${response.status} – ${err.error?.message || 'Détails inconnus'}`);
+                }
+
+                const data = await response.json();
+                const text = data.choices?.[0]?.message?.content?.trim() || "Réponse vide...";
+
+                resultText.innerText = text;
+                resDiv.classList.remove('hidden');
+
+            } catch (err) {
+                alert("Erreur : " + err.message);
+                console.error(err);
+            } finally {
+                loader.classList.add('hidden');
+            }
         }
-    }
-</script>
+
+        // Copy button
+        document.getElementById('copyBtn').addEventListener('click', () => {
+            const text = document.getElementById('resultText').innerText;
+            navigator.clipboard.writeText(text).then(() => {
+                alert("Texte copié dans le presse-papiers !");
+            }).catch(() => alert("Erreur lors de la copie."));
+        });
+    </script>
 </body>
 </html>
