--- a/index.html
+++ b/index.html
@@ -3,99 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProMail Express • AI Reformulator</title>
+    <title>ProMail Express • AI Pro Transformer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-        .fade-in { animation: fadeIn 0.6s ease-out forwards; }
-        .glow-focus { box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.3); }
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes pulseGlow { 0%, 100% { box-shadow: 0 0 0 0 rgba(99, 102, 241, 0.4); } 50% { box-shadow: 0 0 20px 10px rgba(99, 102, 241, 0); } }
+        .fade-in-up { animation: fadeInUp 0.7s ease-out forwards; }
+        .glow-hover:hover { box-shadow: 0 0 25px 10px rgba(99, 102, 241, 0.3); transform: translateY(-2px); }
+        .glass { backdrop-filter: blur(16px); background: rgba(30, 41, 59, 0.45); border: 1px solid rgba(99, 102, 241, 0.2); }
+        body { background: linear-gradient(135deg, #0f172a, #1e1b4b, #312e81); background-attachment: fixed; }
     </style>
 </head>
-<body class="bg-gradient-to-br from-gray-950 to-indigo-950 min-h-screen text-gray-100 flex items-center justify-center p-4 transition-colors duration-300 dark">
-    <div class="w-full max-w-lg">
-        <!-- Card principale -->
-        <div class="bg-gray-900/70 backdrop-blur-xl border border-gray-700/50 rounded-2xl shadow-2xl shadow-indigo-500/10 p-8 transition-all duration-500 hover:shadow-indigo-600/20">
-            <!-- Header avec toggle -->
-            <div class="flex items-center justify-between mb-8">
-                <h1 class="text-3xl font-bold bg-gradient-to-r from-indigo-400 to-purple-500 bg-clip-text text-transparent flex items-center gap-3">
-                    <i class="fas fa-wand-magic-sparkles text-3xl"></i>
+<body class="min-h-screen text-gray-100 flex items-center justify-center p-6 font-sans">
+    <div class="w-full max-w-2xl relative">
+        <!-- Main Card avec glassmorphism premium -->
+        <div class="glass rounded-3xl p-10 shadow-2xl shadow-indigo-900/30 transition-all duration-500 hover:shadow-indigo-700/40">
+            <!-- Header -->
+            <div class="flex items-center justify-between mb-10">
+                <h1 class="text-4xl font-extrabold bg-gradient-to-r from-indigo-400 via-purple-400 to-pink-400 bg-clip-text text-transparent flex items-center gap-4">
+                    <i class="fas fa-wand-magic-sparkles text-4xl animate-pulse"></i>
                     ProMail Express
                 </h1>
-                <button id="themeToggle" class="text-2xl hover:scale-110 transition-transform" title="Toggle theme">
-                    <i class="fas fa-moon"></i>
-                </button>
+                <span class="text-xs uppercase tracking-widest text-indigo-300 opacity-80">AI Powered • 2026</span>
             </div>
 
             <!-- Input clé -->
-            <label class="block text-sm font-medium text-gray-300 mb-2">Clé API Hugging Face (Inference Providers)</label>
-            <input type="password" id="tk" placeholder="hf_..." 
-                   class="w-full px-5 py-4 bg-gray-800/50 border border-gray-600 rounded-xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-500 glow-focus transition-all duration-300"
-                   onchange="localStorage.setItem('saved_tk', this.value)">
+            <div class="mb-8">
+                <label class="block text-sm font-medium text-indigo-300 mb-3">Hugging Face Inference Token</label>
+                <div class="relative">
+                    <input type="password" id="tk" placeholder="hf_..." 
+                           class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all duration-300 glass"
+                           onchange="localStorage.setItem('saved_tk', this.value)">
+                    <i class="fas fa-key absolute right-5 top-1/2 -translate-y-1/2 text-indigo-400"></i>
+                </div>
+            </div>
 
-            <!-- Textarea message -->
-            <label class="block text-sm font-medium text-gray-300 mt-6 mb-2">Message à professionnaliser</label>
-            <textarea id="msg" rows="5" placeholder="Colle ton texte ici... (ex: Salut ça va ? Je t'envoie le doc demain)"
-                      class="w-full px-5 py-4 bg-gray-800/50 border border-gray-600 rounded-xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-500 glow-focus transition-all duration-300 resize-none"></textarea>
+            <!-- Textarea -->
+            <div class="mb-10">
+                <label class="block text-sm font-medium text-indigo-300 mb-3">Ton message brut à transformer</label>
+                <textarea id="msg" rows="6" placeholder="Ex: Yo ça va ? Envoie moi le rapport stp demain..."
+                          class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all duration-300 resize-none glass"></textarea>
+            </div>
 
-            <!-- Bouton Transformer -->
-            <button onclick="send()" class="mt-8 w-full py-5 bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-bold text-lg rounded-xl shadow-lg shadow-indigo-500/30 hover:shadow-indigo-600/50 transform hover:scale-[1.02] transition-all duration-300 flex items-center justify-center gap-3">
-                <i class="fas fa-magic"></i> TRANSFORMER EN PRO
+            <!-- Bouton magique -->
+            <button onclick="send()" 
+                    class="w-full py-6 bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 hover:from-indigo-700 hover:via-purple-700 hover:to-pink-700 text-white font-bold text-xl rounded-2xl shadow-2xl shadow-purple-900/40 hover:shadow-purple-700/60 transform hover:scale-105 transition-all duration-300 flex items-center justify-center gap-4 glow-hover animate-pulse-glow">
+                <i class="fas fa-magic text-2xl"></i>
+                TRANSFORMER EN PRO
             </button>
 
-            <!-- Loader -->
-            <div id="lod" class="hidden mt-6 text-center text-indigo-400 font-medium animate-pulse">
-                ⏳ L'IA reformule en mode professionnel...
+            <!-- Loader futuriste -->
+            <div id="lod" class="hidden mt-8 text-center text-indigo-400 font-medium flex items-center justify-center gap-3 animate-pulse">
+                <i class="fas fa-brain text-2xl animate-spin"></i>
+                L'IA reformule en mode executive...
             </div>
 
-            <!-- Résultat -->
-            <div id="res" class="hidden mt-8 p-6 bg-gray-800/40 border border-indigo-500/30 rounded-xl whitespace-pre-wrap text-gray-200 relative fade-in">
-                <button id="copyBtn" class="absolute top-3 right-3 text-gray-400 hover:text-indigo-400 transition-colors" title="Copier">
-                    <i class="fas fa-copy text-xl"></i>
+            <!-- Résultat avec glass card -->
+            <div id="res" class="hidden mt-10 p-8 glass rounded-2xl border-indigo-500/40 fade-in-up relative">
+                <button id="copyBtn" class="absolute top-4 right-4 text-indigo-300 hover:text-white transition-colors text-xl" title="Copier le résultat">
+                    <i class="fas fa-copy"></i>
                 </button>
-                <div id="resultText"></div>
+                <div id="resultText" class="text-lg leading-relaxed text-gray-200 whitespace-pre-wrap"></div>
             </div>
 
-            <!-- Note -->
-            <p class="mt-6 text-center text-sm text-gray-500">
-                Modèle : Qwen2.5-7B-Instruct • Change-le dans le code si tu veux tester SmolLM ou Llama-3.2
+            <!-- Footer info -->
+            <p class="mt-8 text-center text-sm text-indigo-300/70">
+                Modèle : Qwen2.5-7B-Instruct • Ultra-rapide & excellent en français • Change-le dans le code pour tester SmolLM2 ou Llama-3.2
             </p>
         </div>
+
+        <!-- Subtle floating particles / glow orb (optionnel mais cool) -->
+        <div class="absolute -top-20 -right-20 w-64 h-64 bg-gradient-to-br from-purple-500/20 to-indigo-500/10 rounded-full blur-3xl animate-pulse-slow pointer-events-none"></div>
     </div>
 
     <script>
-        // Sauvegarde clé
+        // Load saved token
         document.getElementById('tk').value = localStorage.getItem('saved_tk') || '';
 
-        // Dark/Light toggle
-        const toggle = document.getElementById('themeToggle');
-        const html = document.documentElement;
-        const icon = toggle.querySelector('i');
-
-        toggle.addEventListener('click', () => {
-            html.classList.toggle('dark');
-            icon.classList.toggle('fa-moon');
-            icon.classList.toggle('fa-sun');
-        });
-
-        // Fonction send
+        // Send function
         async function send() {
             const token = document.getElementById('tk').value.trim();
-            const message = document.getElementById('msg').value.trim();
+            const msg = document.getElementById('msg').value.trim();
             const loader = document.getElementById('lod');
-            const resDiv = document.getElementById('res');
+            const res = document.getElementById('res');
             const resultText = document.getElementById('resultText');
 
-            if (!token || !message) {
-                alert("Clé API et message obligatoires !");
+            if (!token || !msg) {
+                alert("Token + message requis !");
                 return;
             }
 
             loader.classList.remove('hidden');
-            resDiv.classList.add('hidden');
+            res.classList.add('hidden');
 
             try {
-                const response = await fetch("https://router.huggingface.co/v1/chat/completions", {
+                const resp = await fetch("https://router.huggingface.co/v1/chat/completions", {
                     method: "POST",
                     headers: {
                         "Authorization": `Bearer ${token}`,
@@ -105,39 +108,36 @@
                         model: "Qwen/Qwen2.5-7B-Instruct",
                         messages: [{
                             role: "user",
-                            content: `Reformule ce message de façon très professionnelle, polie et concise (style email professionnel français) :\n\n${message}`
+                            content: `Reformule ce message de façon très professionnelle, polie, concise et élégante (style email professionnel français parfait) :\n\n${msg}`
                         }],
-                        max_tokens: 350,
-                        temperature: 0.7
+                        max_tokens: 400,
+                        temperature: 0.65
                     })
                 });
 
-                if (!response.ok) {
-                    const err = await response.json().catch(() => ({}));
-                    throw new Error(`Erreur ${response.status} – ${err.error?.message || 'Détails inconnus'}`);
-                }
+                if (!resp.ok) throw new Error((await resp.json()).error?.message || "Erreur API");
 
-                const data = await response.json();
-                const text = data.choices?.[0]?.message?.content?.trim() || "Réponse vide...";
+                const data = await resp.json();
+                const text = data.choices[0].message.content.trim();
 
                 resultText.innerText = text;
-                resDiv.classList.remove('hidden');
+                res.classList.remove('hidden');
 
-            } catch (err) {
-                alert("Erreur : " + err.message);
-                console.error(err);
+            } catch (e) {
+                alert("Erreur : " + e.message + "\nVérifie token/modèle !");
+                console.error(e);
             } finally {
                 loader.classList.add('hidden');
             }
         }
 
-        // Copy button
-        document.getElementById('copyBtn').addEventListener('click', () => {
-            const text = document.getElementById('resultText').innerText;
-            navigator.clipboard.writeText(text).then(() => {
-                alert("Texte copié dans le presse-papiers !");
-            }).catch(() => alert("Erreur lors de la copie."));
-        });
+        // Copy functionality
+        document.getElementById('copyBtn').onclick = () => {
+            const txt = document.getElementById('resultText').innerText;
+            navigator.clipboard.writeText(txt).then(() => {
+                alert("Copié ! Prêt à coller dans ton email.");
+            }).catch(() => alert("Copie impossible."));
+        };
     </script>
 </body>
 </html>
